--- a/MyidCredentialProvider/MyidCredentialProvider.vcxproj
+++ b/MyidCredentialProvider/MyidCredentialProvider.vcxproj
@@ -180,6 +180,8 @@
     </ClCompile>
     <ClCompile Include="Authenticate.cpp" />
     <ClCompile Include="AuthPackage.cpp" />
+    <ClCompile Include="Credential.cpp" />
+    <ClCompile Include="Credentials.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug_UML|Win32'">false</CompileAsManaged>
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug_UML|x64'">false</CompileAsManaged>
@@ -195,8 +197,10 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Fields.cpp" />
+    <ClCompile Include="LibraryLink.cpp" />
     <ClCompile Include="MyidCredentialProvider.cpp" />
     <ClCompile Include="Policy.cpp" />
+    <ClCompile Include="ServiceMonitor.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug_UML|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug_UML|x64'">Create</PrecompiledHeader>
@@ -204,6 +208,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release_UML|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="MyidCredential.cpp" />
+    <ClCompile Include="VscCredentialSupport.cpp" />
+    <ClCompile Include="VscProvider.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\VC15\MyidCredentialProvider.h" />
@@ -216,9 +222,11 @@
     <ClInclude Include="IncludeMyidCredentialProvider.h" />
     <ClInclude Include="Policy.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="ServiceMonitor.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="MyidCredential.h" />
+    <ClInclude Include="VscProvider.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MyidCredentialProvider.rc" />
