--- a/MyidCredentialProvider/MyidCredentialProvider.vcxproj
+++ b/MyidCredentialProvider/MyidCredentialProvider.vcxproj
@@ -104,7 +104,6 @@
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NO_PKCS11;NO_MSXML;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
@@ -177,10 +176,16 @@
   <ItemGroup>
     <ClCompile Include="..\VC15\MyidCredentialProvider_i.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug_UML|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug_UML|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Authenticate.cpp" />
+    <ClCompile Include="Authenticate.cpp">
+      <DisableSpecificWarnings Condition="'$(Configuration)|$(Platform)'=='Debug_UML|x64'">4302;4311;4312</DisableSpecificWarnings>
+    </ClCompile>
     <ClCompile Include="AuthPackage.cpp" />
-    <ClCompile Include="Credential.cpp" />
+    <ClCompile Include="CardMonitor.cpp" />
+    <ClCompile Include="Credential.cpp">
+      <DisableSpecificWarnings Condition="'$(Configuration)|$(Platform)'=='Debug_UML|x64'">4312;</DisableSpecificWarnings>
+    </ClCompile>
     <ClCompile Include="Credentials.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug_UML|Win32'">false</CompileAsManaged>
@@ -200,6 +205,7 @@
     <ClCompile Include="LibraryLink.cpp" />
     <ClCompile Include="MyidCredentialProvider.cpp" />
     <ClCompile Include="Policy.cpp" />
+    <ClCompile Include="Reader.cpp" />
     <ClCompile Include="ServiceMonitor.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug_UML|Win32'">Create</PrecompiledHeader>
@@ -210,11 +216,13 @@
     <ClCompile Include="MyidCredential.cpp" />
     <ClCompile Include="VscCredentialSupport.cpp" />
     <ClCompile Include="VscProvider.cpp" />
+    <ClCompile Include="VscProviderSupport.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\VC15\MyidCredentialProvider.h" />
     <ClInclude Include="Authenticate.h" />
     <ClInclude Include="AuthPackage.h" />
+    <ClInclude Include="CardMonitor.h" />
     <ClInclude Include="CspInfo.h" />
     <ClInclude Include="Data.h" />
     <ClInclude Include="dllmain.h" />
