--- a/MyidCredentialProvider/MyidCredentialProvider.vcxproj.filters
+++ b/MyidCredentialProvider/MyidCredentialProvider.vcxproj.filters
@@ -64,6 +64,15 @@
     <ClCompile Include="VscCredentialSupport.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VscProviderSupport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CardMonitor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Reader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -109,6 +118,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="VscProvider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CardMonitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
